--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 HTTP_PORT = 9080
 
-WOO_SITE_URL = https://airestechstg.wpengine.com
-WOO_CONSUMER_KEY = ck_a8d2094034cd23d69511b205be6fbfc205357bef
-WOO_CONSUMER_SEC = cs_8397b71cce56838633f5ac6112f7168cc1246738
+WOO_SITE_URL = ''
+WOO_CONSUMER_KEY = ''
+WOO_CONSUMER_SEC = ''
 
 NODE_ENV = development
